--- a/flask_frame_note/templates/jinja2_base.html
+++ b/flask_frame_note/templates/jinja2_base.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<!--jinjia2语法参考PyDevelopment\fastapi_frame_note\templates-->
+<!--参考PyDevelopment\fastapi_frame_note\templates-->
 <p>用户名:{{user_name}}</p>
 <p>喜好:{{user_like}}</p>
 <p>喜好_0:{{user_like[0]}}</p>
